# portal-conductor

./: .gitignore  AUTH_README.md  CLAUDE.md  DeleteUser.dockerfile  Dockerfile  README.md  SSL_README.md  build-with-podman.sh  build.sh  config.template.json  email_service.py  formation.py  go.mod  go.sum  kinds.py  mailman.py  main.go  main.py  portal_datastore.py  portal_db.py  portal_ldap.py  pyproject.toml  start.py  start_dual.py  terrain.py  test_portal_ldap.py
api/: async.go  async_test.go  datastoremgmt.go  emails.go  ldapmgmt.go  mailinglists.go  portalmgmt.go  portalmgmt_test.go  server.go  server_test.go  terrainmgmt.go  terrainmgmt_test.go  users.go
config/: config.go  config_test.go
datastore/: datastore.go
docs/: api.md  authentication.md  configuration.md  development.md  docs.go  ssl.md  swagger.json  swagger.yaml  troubleshooting.md  username-propagation.md
emailsvc/: emailsvc.go  emailsvc_test.go  smtp_test.go
formation/: formation.go  formation_test.go
handlers/: __init__.py  auth.py  datastore_management.py  dependencies.py  email_management.py  ldap_management.py  mailing_list_management.py  portal_management.py  terrain_management.py  user_management.py  validators.py
k8s/: portal-conductor.yml
kinds/: kinds.go  kinds_test.go
ldapclient/: ldapclient.go
mailman/: mailman.go  mailman_test.go
portaldb/: portaldb.go  portaldb_test.go  usercreation.go
scripts/: delete-user.example.json  delete-user.py  generate-password-hash.py  generate-ssl-cert.sh
smtp-proxy/: Dockerfile  build.sh  haproxy.cfg
terrain/: terrain.go  (+1 more)
(+5 files in other folders)
