[project]
name = "portal-conductor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "httpx>=0.28.1",
    "python-ldap>=3.4.4",
    "python-irodsclient>=3.1.1",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.8.0",
    "psycopg2-binary>=2.9.9",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
